Switched flex direction to row reverse

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     margin: 50px;
     height: 600px;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
