--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     margin: 50px;
     height: 600px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
@@ -24,4 +24,21 @@
     padding:20px;
     margin: 10px;
     flex: 1;
+}
+
+.item-1 {
+    order: 1;
+}
+
+.item-2 {
+    order: 0;
+}
+.item-3 {
+    order: 4;
+}
+.item-4 {
+    order: 2;
+}
+.item-5 {
+    order: 3;
 }
